samples/_failures_safe/1761253478_6160ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa4ecacd.c: In function ‘main’:
./samples/SAFE/__tmp_fa4ecacd.c:164:5: error: expected expression at end of input
  164 |     initialize_machine(&
      |     ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fa4ecacd.c:164:5: error: expected declaration or statement at end of input
